tests/rosetta/out/C/bitmap.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:44Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:44Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
typedef struct pixel_t pixel_t;
typedef struct bitmap_t bitmap_t;

typedef struct {
  int ok;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ok;
  pixel_t pixel;
} tmp_item1_t;
typedef struct {
  int len;
  tmp_item1_t *data;
} tmp_item1_list_t;
tmp_item1_list_t create_tmp_item1_list(int len) {
  tmp_item1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct pixel_t {
  int R;
  int G;
  int B;
} pixel_t;
typedef struct {
  int len;
  pixel_t *data;
} pixel_list_t;
pixel_list_t create_pixel_list(int len) {
  pixel_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(pixel_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct bitmap_t {
  int cols;
  int rows;
  list_int px;
} bitmap_t;
typedef struct {
  int len;
  bitmap_t *data;
} bitmap_list_t;
bitmap_list_t create_bitmap_list(int len) {
  bitmap_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(bitmap_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

pixel_t pixelFromRgb(int c) {
  __auto_type r = ((int)((((double)c) / ((double)65536)))) % 256;
  __auto_type g = ((int)((((double)c) / ((double)256)))) % 256;
  __auto_type b = c % 256;
  return (pixel_t){.r = r, .g = g, .b = b};
}

int rgbFromPixel(pixel_t *p) { return p->r * 65536 + p->g * 256 + p->b; }

bitmap_t NewBitmap(int x, int y) {
  __auto_type row = 0;
  while (row < y) {
    pixel_list_t r = {0, NULL};
    __auto_type col = 0;
    while (col < x) {
      pixel_list_t tmp1 = create_pixel_list(r.len + 1);
      for (int i2 = 0; i2 < r.len; i2++) {
        tmp1.data[i2] = r.data[i2];
      }
      tmp1.data[r.len] = (pixel_t){.r = 0, .g = 0, .b = 0};
      tmp1.len = r.len + 1;
      r = tmp1;
      col = col + 1;
    }
    data = 0;
    row = row + 1;
  }
  return (bitmap_t){.cols = x, .rows = y, .px = data};
}

map_string_int Extent(bitmap_t *b) {
  map_string_int tmp3 = map_string_int_create(2);
  map_string_int_put(&tmp3, "cols", b->cols);
  map_string_int_put(&tmp3, "rows", b->rows);
  return tmp3;
}

int Fill(bitmap_t *b, pixel_t *p) {
  __auto_type y = 0;
  while (y < b->rows) {
    __auto_type x = 0;
    while (x < b->cols) {
      __auto_type px = b->px;
      __auto_type row = px.data[y];
      row.data[x] = p;
      px.data[y] = row;
      b->px = px;
      x = x + 1;
    }
    y = y + 1;
  }
}

int FillRgb(bitmap_t *b, int c) { Fill(&b, &pixelFromRgb(c)); }

int SetPx(bitmap_t *b, int x, int y, pixel_t *p) {
  if (x < 0 || x >= b->cols || y < 0 || y >= b->rows) {
    return 0;
  }
  __auto_type px = b->px;
  __auto_type row = px.data[y];
  row.data[x] = p;
  px.data[y] = row;
  b->px = px;
  return 1;
}

int SetPxRgb(bitmap_t *b, int x, int y, int c) {
  return SetPx(&b, x, y, &pixelFromRgb(c));
}

int GetPx(bitmap_t *b, int x, int y) {
  if (x < 0 || x >= b->cols || y < 0 || y >= b->rows) {
    return (tmp_item_t){.ok = 0};
  }
  __auto_type row = b->px.data[y];
  return (tmp_item1_t){.ok = 1, .pixel = row.data[x]};
}

int GetPxRgb(bitmap_t *b, int x, int y) {
  __auto_type r = GetPx(&b, x, y);
  if (((!r.ok))) {
    return (tmp_item_t){.ok = 0};
  }
  return (tmp_item1_t){.ok = 1, .rgb = rgbFromPixel(r.pixel)};
}

int ppmSize(bitmap_t *b) {
  char *tmp4 = _str(b->cols);
  char *tmp5 = concat_string(
      "P6\n# Creator: Rosetta Code http://rosettacode.org/\n", tmp4);
  char *tmp6 = concat_string(tmp5, " ");
  char *tmp7 = _str(b->rows);
  char *tmp8 = concat_string(tmp6, tmp7);
  char *tmp9 = concat_string(tmp8, "\n255\n");
  __auto_type header = tmp9;
  return strlen(header) + 3 * b->cols * b->rows;
}

char *pixelStr(pixel_t *p) {
  char *tmp10 = _str(p->r);
  char *tmp11 = concat_string("{", tmp10);
  char *tmp12 = concat_string(tmp11, " ");
  char *tmp13 = _str(p->g);
  char *tmp14 = concat_string(tmp12, tmp13);
  char *tmp15 = concat_string(tmp14, " ");
  char *tmp16 = _str(p->b);
  char *tmp17 = concat_string(tmp15, tmp16);
  char *tmp18 = concat_string(tmp17, "}");
  return tmp18;
}

int mochi_main() {
  __auto_type bm = NewBitmap(300, 240);
  FillRgb(&bm, 16711680);
  SetPxRgb(&bm, 10, 20, 255);
  SetPxRgb(&bm, 20, 30, 0);
  SetPxRgb(&bm, 30, 40, 1056816);
  __auto_type c1 = GetPx(&bm, 0, 0);
  __auto_type c2 = GetPx(&bm, 10, 20);
  __auto_type c3 = GetPx(&bm, 30, 40);
  char *tmp19 = _str(bm.cols);
  char *tmp20 = concat_string("Image size: ", tmp19);
  char *tmp21 = concat_string(tmp20, " × ");
  char *tmp22 = _str(bm.rows);
  char *tmp23 = concat_string(tmp21, tmp22);
  printf("%s\n", tmp23);
  char *tmp24 = _str(ppmSize(&bm));
  char *tmp25 = concat_string(tmp24, " bytes when encoded as PPM.");
  printf("%s\n", tmp25);
  if ((c1.ok)) {
    char *tmp26 = concat_string("Pixel at (0,0) is ", pixelStr(c1.pixel));
    printf("%s\n", tmp26);
  }
  if ((c2.ok)) {
    char *tmp27 = concat_string("Pixel at (10,20) is ", pixelStr(c2.pixel));
    printf("%s\n", tmp27);
  }
  if ((c3.ok)) {
    __auto_type p = c3.pixel;
    __auto_type r16 = p.r * 257;
    __auto_type g16 = p.g * 257;
    __auto_type b16 = p.b * 257;
    char *tmp28 = _str(r16);
    char *tmp29 = concat_string("Pixel at (30,40) has R=", tmp28);
    char *tmp30 = concat_string(tmp29, ", G=");
    char *tmp31 = _str(g16);
    char *tmp32 = concat_string(tmp30, tmp31);
    char *tmp33 = concat_string(tmp32, ", B=");
    char *tmp34 = _str(b16);
    char *tmp35 = concat_string(tmp33, tmp34);
    printf("%s\n", tmp35);
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
